# Telenor_interview

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
interview/: add_events.py  clear.py  constants.py  global_spike.py  local_spike.py  spike_detector_v2.py  utils.py  verify.py
